Vision Core.css
/* ... */
article.video section.media iframe {
  width: 100%;
}

.ask-item {
  display: grid;
  grid-template-columns: minmax(0, 1fr) 40px;
  grid-column-gap: var(--post-vertical-spacing);
  margin: var(--post-vertical-spacing) 0;
}

.ask-item > * {
  border-radius: 3px;
}

.ask-item > div {
  padding: var(--post-vertical-spacing) var(--post-padding) 0;

  background: rgba(var(--title), 0.07);
}

.ask-item .user {
  color: rgba(var(--title), 0.65);
  font-size: .875rem;
}

.ask-item .user a {
  color: inherit;
  font-weight: bolder;
  text-decoration: none;
}

.ask-item > div > blockquote {
  border: none;
  padding: 0;
}

/* Post NPF media */

article h3,
article h4,
article h5,
article h6 {
  font-size: 1rem;
  font-weight: normal;
}

article h2 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.3;
}

article h1 {
  font-size: 1.625rem;
  font-weight: 400;
  line-height: 1.3;
}

p.npf_quote {
  font-size: 1.4375rem;
}

blockquote.npf_indented {
  padding-top: .625rem;
  padding-bottom: .625rem;
  margin-top: 0;
  margin-bottom: 0;
}

article ul,
article ol {
  padding-left: var(--post-padding);
}

article ul {
  list-style-type: disc;
}

article ol {
  font-feature-settings: "tnum" 0;
  list-style-type: decimal;
}

.read_more_container {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.read_more_container > .read_more,
a.tmblr-truncated-link {
  color: rgb(var(--accent));
  text-decoration: none;
  font-weight: bold;
}

:not(.read_more_container) > a.tmblr-truncated-link {
  display: block;
  text-align: center;
}

figure {
  margin: 0 0 4px;
}

.post-content div.npf_row,
.post div.npf_row,
body div.npf_row {
  align-items: stretch;
}

.post-content div.npf_row .npf_col,
.post div.npf_row .npf_col,
body div.npf_row .npf_col {
  display: flex;
}

.post-content div.npf_row .npf_col figure,
.post div.npf_row .npf_col figure,
body div.npf_row .npf_col figure {
  padding-bottom: 0;
}

.post-content div.npf_row .npf_col figure img,
.post div.npf_row .npf_col figure img,
body div.npf_row .npf_col figure img {
  position: static;
}

figure.tmblr-full,
.post-content div.npf_row,
.post div.npf_row,
body div.npf_row {
  max-width: none;
  margin-left: calc(0px - var(--post-padding));
  margin-right: calc(0px - var(--post-padding));
}

.post-content div.npf_row .npf_col,
.post-content div.npf_row figure.tmblr-full,
.post div.npf_row .npf_col,
.post div.npf_row figure.tmblr-full,
body div.npf_row .npf_col,
body div.npf_row figure.tmblr-full {
  margin-left: 0;
  margin-right: 0;
}

a.post_media_photo_anchor {
  flex: 1;
  cursor: pointer;
}

figure img {
  display: block;
  height: auto;
}

figure.tmblr-full img,
figure.tmblr-full audio {
  width: 100%;
}

.tmblr-lightbox .lightbox-image {
  max-width: none;
}

.tmblr-attribution {
  margin-top: .5rem;
}

figure.tmblr-full .tmblr-attribution {
  display: flex;
  justify-content: flex-end;
  padding: 0 var(--post-padding);
}

.tmblr-attribution a {
  color: rgba(var(--title), 0.65);
  text-decoration: none;
  font-weight: bold;
}

.npf-link-block {
  border-color: rgba(var(--title), 0.25) !important;
}

.npf-link-block a {
  color: rgb(var(--title));
  text-decoration: none;
}

.npf-link-block .poster {
  border-bottom: 1px solid rgba(var(--title), 0.25);

  background-clip: content-box;
}

.npf-link-block .poster .title {
  font-weight: 400;
  text-align: center;
}

.npf-link-block.no-poster .title {
  margin-top: 1rem;
}

.npf-link-block .bottom .description:not(:last-child) {
  margin-bottom: .5rem;
}

.npf-link-block .bottom .site-name {
  margin-top: 0;

  color: rgba(var(--title), 0.65);
  font-size: .78125rem;
  font-weight: 400;
}

/* Reblog trail */

.trail-item {
  border-top: 1px solid rgba(var(--title), .13);
  margin-top: var(--post-vertical-spacing);
}

.trail-item:first-child {
  margin-top: 0;
}

.trail-blog {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0 var(--post-padding);
  margin: var(--post-vertical-spacing) 0;

  color: rgb(var(--title));
  font-size: .875rem;
  text-decoration: none;
}

.trail-blog .avatar {
  height: 25px;
  width: 25px;
  border-radius: 3px;
  margin-right: 1ch;
}

.trail-content, .post-content {
  padding: 0 var(--post-padding);
}

.trail-item + .post-content {
  display: none;
}

/* Content source */

section.source {
  padding: 0 var(--post-padding);
  margin-top: .625rem;

  color: rgba(var(--title), 0.65);
}

section.source a {
  color: inherit;
  text-decoration: none;
}

section.source a:hover,
section.source a:focus {
  text-decoration: underline;
}

/* Submitter credit */

section.submitter {
  padding: 0 var(--post-padding);
  margin-top: .625rem;

  color: rgba(var(--title), 0.65);
}

section.source + section.submitter {
  margin-top: 0;
}

section.submitter a {
  color: inherit;
  font-weight: bold;
  text-decoration: none;
}

/* Tags */

section.tags {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 0 var(--post-padding);
  margin-top: .625rem;
}

section.tags:empty {
  display: none;
}

section.tags a.tag {
  display: inline-block;
  margin-right: 1ch;

  color: rgba(var(--title), 0.65);
  text-decoration: none;
}

section.tags a.tag::before {
  content: "#";
}

section.tags a.tag:hover,
section.tags a.tag:focus {
  text-decoration: underline;
}

/* Pinned post label */

.pinned-post-label {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  margin-right: 1ch;

  color: rgb(var(--accent));
  filter: hue-rotate(-61deg);
  font-weight: bold;
}

.pinned-post-label svg {
  margin-right: 0.5ch;

  fill: rgb(var(--accent));
}


/* Post footer */

article footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  min-height: 28px;
  padding: 0 var(--post-padding);
  margin-top: .75rem;

  color: rgba(var(--title), 0.65);
}

article footer a {
  color: inherit;
  text-decoration: none;
}
/* ... */

